--- a/style.css
+++ b/style.css
@@ -8,8 +8,13 @@
 .navbar-nav li a {
   color: white;
 }
-
-
+label{
+  color: black;
+  font-size: 20px;
+  font-weight: bold;
+  
+  
+}
 
 .navbar-collapse {
   align-items: center;
@@ -175,7 +180,7 @@ h1 {
   height: 100%;
   width: 100%;
   padding: 10px;
-  border-radius: 10px;
+  border-radius: 20px;
   display: block;
   transition: all 0.2s ease;
 }
